Fix handle cursor not showing in SortableList

--- a/blazorbootstrap/Components/SortableList/SortableList.razor.css
+++ b/blazorbootstrap/Components/SortableList/SortableList.razor.css
@@ -1,3 +1,3 @@
-::deep .bb-sortable-list-handle {
+﻿.list-group-item {
     cursor: grab !important;
 }
